[gd_scene load_steps=3 format=2]

[ext_resource path="res://autoload/global/Global.gd" type="Script" id=1]
[ext_resource path="res://scripts/wait_for_splash_finish.gd" type="Script" id=2]

[node name="Global" type="Node"]
script = ExtResource( 1 )

[node name="WaitForSplashFinish" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="godot_splash_finished" from="WaitForSplashFinish" to="." method="_on_WaitForSplashFinish_godot_splash_finished"]
